--- a/environment.yml
+++ b/environment.yml
@@ -5,6 +5,6 @@ dependencies:
   - ipykernel
   - numpy
   - pandas
-  - blosc
+  - python-blosc
   - pip:
     - https://storage.googleapis.com/protein-design-ipd-public/wheelhouse/pyrosetta-2017.48.post0.dev0%2B115.fordas.devbase.2f28739faee-cp35-cp35m-linux_x86_64.whl
