--- a/environment.yml
+++ b/environment.yml
@@ -1,10 +1,15 @@
 name: pyrosettascripts_demo
+channels:
+  - conda-forge
 dependencies:
   - python=3.5
   - ipython
   - ipykernel
   - numpy
   - pandas
+  - scipy
+  - biopython
+  - seaborn
   - python-blosc
   - pip:
     - https://storage.googleapis.com/protein-design-ipd-public/wheelhouse/pyrosetta-2017.48.post0.dev0%2B115.fordas.devbase.2f28739faee-cp35-cp35m-linux_x86_64.whl
